Change horizontal toolbar back to floating layout. The previous inline-block approach made empty textnodes visible which caused small gaps between the li, which in turn prevented a clean border around toolbox buttons.

--- a/ftw/simplelayout/browser/resources/integration.theme.scss
+++ b/ftw/simplelayout/browser/resources/integration.theme.scss
@@ -395,9 +395,6 @@ ul[class^="sl-toolbar"] {
     top: -$editbar-height;
     height: $editbar-height;
     li {
-      display: inline-block;
-      float: none;
-
       > a {
         border-bottom: 0;
         border-right: 1px solid lighten($color-text, 5%);
